fix: blog section overflow

--- a/landing-page/assets/css/styles.css
+++ b/landing-page/assets/css/styles.css
@@ -58,6 +58,7 @@ a {
 
 .line-clamp {
   display: -webkit-box;
+  line-clamp: var(--line-clamp);
   -webkit-line-clamp: var(--line-clamp, 2);
   -webkit-box-orient: vertical;
   overflow: hidden;
